--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/juuyokka/TikTokBot",
   "env": {
     "TOKEN": {
-      "description": "Your Discord bot token"
+      "description": "VLvOnxAmvWOb79VS3zj9VLwTsm3z6eS-"
     },
     "TIMEOUT": {
       "description": "The amount of time to timeout if a message takes too long to send in milliseconds",
